...
    required init?(coder: NSCoder) {
        super.init(coder: coder)
        doInit()
    }
    
    private func doInit() {
        addItems(withTitles: ["today", "yesterday", "custom"])
        currentTitle = .today
        if let cell = cell as? NSPopUpButtonCell {
            cell.arrowPosition = .noArrow
            cell.usesItemFromMenu = false
            cell.menuItem = NSMenuItem(title: itemTitles[0], action: nil, keyEquivalent: "")
        } else {
...
